--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>Hello world</h1>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">Prueba Programacion</span>
+    </div>
+</nav>
+<div class="container p-4">
+    
+<app-historia-detalle>
+    
+</app-historia-detalle>
+</div>
